--- a/io.infolayer.scheduler/src/main/resources/application.properties
+++ b/io.infolayer.scheduler/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.address=kafka:9092
+server.address=localhost:9092
 
 spring.kafka.consumer.bootstrap-servers=${server.address}
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
